[gd_scene load_steps=5 format=3 uid="uid://818lyugdd5ug"]

[ext_resource type="Script" path="res://Game/User Interface/Scripts/HSlider.gd" id="1_6h1kt"]
[ext_resource type="Script" path="res://Game/User Interface/PauseMenu.gd" id="1_lxn4c"]
[ext_resource type="PackedScene" uid="uid://bt2huu5365yah" path="res://Game/User Interface/InputSettings.tscn" id="2_edcee"]
[ext_resource type="AudioStream" uid="uid://duwphl22db3o2" path="res://Music and Sounds/Sound Effects/explosion1.mp3" id="3_31q1u"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lxn4c")

[node name="InputSettings" parent="." instance=ExtResource("2_edcee")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 336.0
offset_top = 136.0
offset_right = 336.0
offset_bottom = 136.0
size_flags_horizontal = 6
size_flags_vertical = 4
focus_next = NodePath("../MarginContainer/HBoxContainer/ReturnGameButton")
focus_previous = NodePath("../MarginContainer/HBoxContainer/AudioContainer")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="AudioContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_next = NodePath("../../../InputSettings")
focus_previous = NodePath("../ReturnGameButton")
alignment = 1

[node name="MasterAudioLabel" type="Label" parent="MarginContainer/HBoxContainer/AudioContainer"]
layout_mode = 2
text = "Master Volume"

[node name="MasterAudioSlider" type="HSlider" parent="MarginContainer/HBoxContainer/AudioContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
script = ExtResource("1_6h1kt")
bus_name = "Master"

[node name="MusicAudioLabel" type="Label" parent="MarginContainer/HBoxContainer/AudioContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicAudioSlider" type="HSlider" parent="MarginContainer/HBoxContainer/AudioContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
script = ExtResource("1_6h1kt")
bus_name = "Music"

[node name="SFXAudioLabel" type="Label" parent="MarginContainer/HBoxContainer/AudioContainer"]
layout_mode = 2
text = "Sound Effects Volume"

[node name="SFXAudioSlider" type="HSlider" parent="MarginContainer/HBoxContainer/AudioContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
script = ExtResource("1_6h1kt")
bus_name = "SFX"

[node name="ReturnGameButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_vertical = 8
focus_next = NodePath("../AudioContainer")
focus_previous = NodePath("../../../InputSettings")
text = "Return to game"

[node name="ReturnMenuButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_vertical = 8
focus_next = NodePath("../AudioContainer")
focus_previous = NodePath("../../../InputSettings")
text = "Return to menu"

[node name="ButtonAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_31q1u")
mix_target = 2
bus = &"SFX"

[connection signal="drag_ended" from="MarginContainer/HBoxContainer/AudioContainer/SFXAudioSlider" to="." method="_on_sfx_audio_slider_drag_ended"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ReturnGameButton" to="." method="_on_return_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ReturnMenuButton" to="." method="_on_return_menu_button_pressed"]
